test profile pic

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
         <div class="testimonial-card">
           <div class="profile-content">
-            <img src="/images/image-anne.jpg" alt="" class="profile">
+            <img src="https://github.com/ralphux/FE-mentor-social-proof-section/blob/main/images/image-anne.jpg" alt="" class="profile">
             <div class="name-credit">
               <h2 class="name">Anne Wallace</h2>
               <p class="credit">Verified Buyer</p>
