--- a/index.html
+++ b/index.html
@@ -41,31 +41,31 @@
         <div class="ratings-wrapper">
           <div class="rating-card">
             <div class="star-wrapper">
-              <img src="/images/icon-star.svg" alt="">
-              <img src="/images/icon-star.svg" alt="">
-              <img src="/images/icon-star.svg" alt="">
-              <img src="/images/icon-star.svg" alt="">
-              <img src="/images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
             </div>
             <p class="rating">Rated 5 Stars in Reviews</p>
           </div>
           <div class="rating-card">
             <div class="star-wrapper">
-              <img src="/images/icon-star.svg" alt="">
-              <img src="/images/icon-star.svg" alt="">
-              <img src="/images/icon-star.svg" alt="">
-              <img src="/images/icon-star.svg" alt="">
-              <img src="/images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
             </div>
             <p class="rating">Rated 5 Stars in Report Guru</p>
           </div>
           <div class="rating-card">
             <div class="star-wrapper">
-              <img src="/images/icon-star.svg" alt="">
-              <img src="/images/icon-star.svg" alt="">
-              <img src="/images/icon-star.svg" alt="">
-              <img src="/images/icon-star.svg" alt="">
-              <img src="/images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
             </div>
             <p class="rating">Rated 5 Stars in BestTech</p>
           </div>
@@ -78,7 +78,7 @@
       <div class="testimonial-wrapper">
         <div class="testimonial-card">
           <div class="profile-content">
-            <img src="/images/image-colton.jpg" alt="" class="profile">
+            <img src="images/image-colton.jpg" alt="" class="profile">
             <div class="name-credit">
               <h2 class="name">Colton Smith</h2>
               <p class="credit">Verified Buyer</p>
@@ -90,7 +90,7 @@
         </div>
         <div class="testimonial-card">
           <div class="profile-content">
-            <img src="/images/image-irene.jpg" alt="" class="profile">
+            <img src="images/image-irene.jpg" alt="" class="profile">
             <div class="name-credit">
               <h2 class="name">Irene Roberts</h2>
               <p class="credit">Verified Buyer</p>
